[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralign"
authors = [
    {name = "Daniel Wagenaar", email = "daw@caltech.edu"},
]
description = "Python implementation of SWIFT-IR"
readme = "README.md"
version = "0.4.0"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
]
requires-python = ">=3.12"
classifiers = [ 
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wagenadl/spectralign"

